[tool.poetry]
name = "dialysis-data"
version = "0.1.0"
description = "Tool for tracking my home peritoneal dialysis sessions and associated vitals."
license = "MIT"
authors = ["Travis B. Hartwell <nafai@travishartwell.net>"]
homepage = "https://github.com/travisbhartwell/dialysis-data"
repository = "https://github.com/travisbhartwell/dialysis-data"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.6.1"}
attrs = "^22.1.0"
cattrs = "^22.1.0"
exceptiongroup = "^1.0.0-rc.8"
rich = "^12.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pytest-cov = "^3.0.0"
pytest-html = "^3.1.1"
black = {version = "^22.6.0", allow-prereleases = true}
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.971"
autoflake = "^1.4"

[tool.poetry.scripts]
dialysis-data = "dialysis_data.main:app"

[tool.poetry.urls]
Changelog = "https://github.com/travisbhartwell/dialysis-data/releases"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
lines_after_imports = 2
known_first_party = [ "dialysis_data" ]

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
